--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,54 @@
+.container {
+  background: #fff;
+  margin: 0 auto;
+  max-width: 600px;
+  padding: 50px;
+  border-radius: 10px;
+  margin: 60px 0;
+
+  box-shadow: 0px 1px 1px rgba(9, 30, 66, 0.25),
+    0px 0px 1px 1px rgba(9, 30, 66, 0.13);
+}
+select {
+  display: block;
+  border-radius: 4px;
+  padding: 10px;
+  width: 100%;
+}
 h1 {
   text-align: center;
+  font-size: 36px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+h2 {
+  margin: 0 0 5px;
+  font-size: 28px;
+}
+.city {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+  padding: 20px 0;
+  border-bottom: 1px dashed grey;
+}
+.city:last-child {
+  border: none;
+}
+.date {
+  opacity: 0.6;
+}
+
+.time {
+  font-weight: 900;
+  font-size: 48px;
+}
+.time small {
+  font-size: 20px;
+  vertical-align: middle;
+  line-height: 36px;
 }
 footer {
   text-align: center;
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.5);
 }
