--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,14 @@
+body {
+  font-family: Roboto Mono, monospace;
+}
+
 .container {
   background: #fff;
   margin: 0 auto;
   max-width: 600px;
-  padding: 50px;
+  padding: 40px;
   border-radius: 10px;
-  margin: 60px 0;
+  margin: 50px 0;
 
   box-shadow: 0px 1px 1px rgba(9, 30, 66, 0.25),
     0px 0px 1px 1px rgba(9, 30, 66, 0.13);
@@ -17,8 +21,8 @@ select {
 }
 h1 {
   text-align: center;
-  font-size: 36px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 40px;
+  font-family: Roboto Mono, monospace;
 }
 h2 {
   margin: 0 0 5px;
@@ -39,7 +43,7 @@ h2 {
 }
 
 .time {
-  font-weight: 900;
+  font-weight: bold;
   font-size: 48px;
 }
 .time small {
